minor configuration of vue and browserify

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <section id="app">
-        <config-menu></config-menu>
+    Hello world
+        <!-- <config-menu></config-menu>
         <header id="main-header" class="margin-bottom" style="height:100px">
             <navbar v-bind:suites="suites"></navbar>
         </header>
@@ -27,18 +28,18 @@
 
         <footer v-if="AppStatus.config.bottomBar">
             <bottom-bar></bottom-bar>
-        </footer>
+        </footer> -->
     </section>
 
-    <script>
+    <!-- <script>
         window.$ = window.jQuery = require('./node_modules/jquery/dist/jquery.min.js');
         window.Hammer = require('./node_modules/materialize-css/js/hammer.min.js');
     </script>
     <script src="./node_modules/jquery-ui/build/release.js"></script>
     <script src="./node_modules/materialize-css/dist/js/materialize.min.js"></script>
-    <script src="./node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+    <script src="./node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>-->
     <script src="./node_modules/vue/dist/vue.min.js"></script>
-    <script type="text/javascript" src="./app.js"></script>
+    <script type="text/javascript" src="./resources/bundle.js"></script>
 </body>
 
 </html>
